# recall

./: .gitignore  LICENSE  README.md  config.yaml.tpl  main.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
collectors/: firefox.py  gcalendar.py  shell.py
docs/: plan.html  research.md
src/recall/: config.py  main.py
src/recall/collectors/: base.py  firefox.py  gcalendar.py  gitlab.py  shell.py  slack.py
src/recall/utils/: summarizer.py
src/work_activity_aggregator/: main.py
src/work_activity_aggregator/collectors/: base.py  gcalendar.py  gitlab.py  slack.py
src/work_activity_aggregator/utils/: summarizer.py
tests/: conftest.py  test_config.py  test_main.py  test_summarizer.py  utils.py
tests/collectors/: test_firefox.py  test_gcalendar.py  test_gitlab.py  test_shell.py  test_slack.py
utils/: summarizer.py
