[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "recall"
version = "0.1.0"
description = "A tool to aggregate your digital activity, creating a perfect memory of your day."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-dotenv>=1.1.1",
    "python-gitlab>=6.4.0",
    "rich>=14.1.0",
    "slack-sdk>=3.36.0",
    "yaspin>=3.2.0",
]

[project.scripts]
recall = "recall.main:_main"
